woohoo getting there

--- a/swimming_bot.ioc
+++ b/swimming_bot.ioc
@@ -15,7 +15,7 @@ Mcu.IP11=TIM2
 Mcu.IP12=TIM3
 Mcu.IP13=USART1
 Mcu.IP2=FMC
-Mcu.IP3=I2C2
+Mcu.IP3=I2C1
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=RTC
@@ -64,51 +64,51 @@ Mcu.Pin40=PE12
 Mcu.Pin41=PE13
 Mcu.Pin42=PE14
 Mcu.Pin43=PE15
-Mcu.Pin44=PB10
-Mcu.Pin45=PB11
-Mcu.Pin46=PD8
-Mcu.Pin47=PD9
-Mcu.Pin48=PD10
-Mcu.Pin49=PD11
+Mcu.Pin44=PD8
+Mcu.Pin45=PD9
+Mcu.Pin46=PD10
+Mcu.Pin47=PD11
+Mcu.Pin48=PD12
+Mcu.Pin49=PD13
 Mcu.Pin5=PC14-OSC32_IN
-Mcu.Pin50=PD12
-Mcu.Pin51=PD13
-Mcu.Pin52=PD14
-Mcu.Pin53=PD15
-Mcu.Pin54=PG2
-Mcu.Pin55=PG3
-Mcu.Pin56=PG4
-Mcu.Pin57=PG5
-Mcu.Pin58=PG8
-Mcu.Pin59=PC6
+Mcu.Pin50=PD14
+Mcu.Pin51=PD15
+Mcu.Pin52=PG2
+Mcu.Pin53=PG3
+Mcu.Pin54=PG4
+Mcu.Pin55=PG5
+Mcu.Pin56=PG8
+Mcu.Pin57=PC6
+Mcu.Pin58=PC7
+Mcu.Pin59=PC8
 Mcu.Pin6=PC15-OSC32_OUT
-Mcu.Pin60=PC7
-Mcu.Pin61=PC8
-Mcu.Pin62=PC9
-Mcu.Pin63=PA8
-Mcu.Pin64=PA9
-Mcu.Pin65=PA10
-Mcu.Pin66=PA11
-Mcu.Pin67=PA13
-Mcu.Pin68=PA14
-Mcu.Pin69=PA15
+Mcu.Pin60=PC9
+Mcu.Pin61=PA8
+Mcu.Pin62=PA9
+Mcu.Pin63=PA10
+Mcu.Pin64=PA11
+Mcu.Pin65=PA13
+Mcu.Pin66=PA14
+Mcu.Pin67=PA15
+Mcu.Pin68=PC11
+Mcu.Pin69=PD0
 Mcu.Pin7=PF0
-Mcu.Pin70=PC11
-Mcu.Pin71=PD0
-Mcu.Pin72=PD1
-Mcu.Pin73=PD2
-Mcu.Pin74=PD3
-Mcu.Pin75=PD4
-Mcu.Pin76=PD5
-Mcu.Pin77=PD6
-Mcu.Pin78=PD7
-Mcu.Pin79=PG9
+Mcu.Pin70=PD1
+Mcu.Pin71=PD2
+Mcu.Pin72=PD3
+Mcu.Pin73=PD4
+Mcu.Pin74=PD5
+Mcu.Pin75=PD6
+Mcu.Pin76=PD7
+Mcu.Pin77=PG9
+Mcu.Pin78=PG10
+Mcu.Pin79=PG15
 Mcu.Pin8=PF1
-Mcu.Pin80=PG10
-Mcu.Pin81=PG15
-Mcu.Pin82=PB3
-Mcu.Pin83=PB4
-Mcu.Pin84=PB5
+Mcu.Pin80=PB3
+Mcu.Pin81=PB4
+Mcu.Pin82=PB5
+Mcu.Pin83=PB6
+Mcu.Pin84=PB7
 Mcu.Pin85=PB8
 Mcu.Pin86=PB9
 Mcu.Pin87=PE0
@@ -157,16 +157,16 @@ PA8.Signal=S_TIM1_CH1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB1.Signal=S_TIM3_CH4
-PB10.Mode=I2C
-PB10.Signal=I2C2_SCL
-PB11.Mode=I2C
-PB11.Signal=I2C2_SDA
 PB2.Mode=SD_1_bit
 PB2.Signal=SDIO_CK
 PB3.Signal=S_TIM2_CH2
 PB4.Mode=Full_Duplex_Master
 PB4.Signal=SPI1_MISO
 PB5.Signal=S_TIM3_CH2
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PB8.Mode=Slave_8_bits_External_Synchro
 PB8.Signal=DCMI_D6
 PB9.Mode=Slave_8_bits_External_Synchro
@@ -468,8 +468,9 @@ TIM1.IPParameters=Channel-Input_Capture4_from_TI4
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.IPParameters=Channel-PWM Generation2 CH2
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM3.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4
+TIM3.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
